sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:3: error: not found: value l
l = getNombreValeurs()
^AlgCocktailSort1:6: error: not found: value tri
while (tri) {
       ^AlgCocktailSort1:8: error: not found: value l
for (i <- 0 to l-2)
               ^AlgCocktailSort1:11: error: not found: value l
for (i <- l-2 to 0 by -1)
          ^